--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -6,7 +6,10 @@
   .Title {
     text-align: center;
   }
- 
+  .spnOption{
+    line-height: 55px;
+    font-size: 16px;
+  }
   .adm-input-element {
     border-radius: 16px;
     background: #000;
